--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                             <p class="regular">Developer</p>
                         </div>
                         <ul>
-                            <li>
-                                <div class="icon"><i class="fas fa-map-signs"></i></div>
+                            <li >
+                                <div class="icon resume-icon-icon "><i class="fas fa-map-signs"></i></div>
                                 <div class="data">
                                     Cam Le - TP Da Nang
                                 </div>
                             </li>
                             <li>
-                                <div class="icon"><i class="fas fa-mobile-alt"></i></div>
+                                <div class="icon resume-icon-icon"><i class="fas fa-mobile-alt"></i></div>
                                 <div class="data">
                                     +84777588110                                </div>
                             </li>
                             <li>
-                                <div class="icon"><i class="fas fa-envelope"></i></div>
+                                <div class="icon resume-icon-icon"><i class="fas fa-envelope"></i></div>
                                 <div class="data">
                                     nqtruongnk@gmail.com
                                 </div>
@@ -97,7 +97,7 @@
                         </div>
                         <ul>
                             <li>
-                                <div class="icon"><i class="fab fa-facebook"></i></div>
+                                <div class="icon resume-icon-icon"><i class="fab fa-facebook"></i></div>
                                 <div class="data">
                                     <p class="semi_bold">
                                         Facebook
@@ -106,7 +106,7 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="icon"><i class="fab fa-instagram"></i></div>
+                                <div class="icon resume-icon-icon"><i class="fab fa-instagram"></i></div>
                                 <div class="data">
                                     <p class="semi_bold">
                                         Instagram
@@ -160,9 +160,9 @@
                         <p class="bold">Hobby</p>
                     </div>
                     <ul>
-                        <li><i class="far fa-futbol"></i></li>
-                        <li><i class="fas fa-gamepad"></i></li>
-                        <li><i class="fas fa-book"></i></li>
+                        <li class="resume-icon-icon"><i class="far fa-futbol"></i></li>
+                        <li class="resume-icon-icon"><i class="fas fa-gamepad"></i></li>
+                        <li class="resume-icon-icon"><i class="fas fa-book"></i></li>
                     </ul>
                 </div>
             </div>
